--- a/TP2/makefile
+++ b/TP2/makefile
@@ -4,12 +4,12 @@ restaurant.o:
 	g++ -c restaurant.cpp -Wall -g
 glouton.o: restaurant.o
 	g++ -c glouton.cpp -Wall -g
-dynamique.o:
-	g++ -c dynamique.cpp -Wall -g
+progdyn.o:
+	g++ -c progdyn.cpp -Wall -g
 main.o :
 	g++ -c main.cpp -Wall -g
-main: glouton.o dynamique.o main.o restaurant.o
-	g++ -o main main.o dynamique.o glouton.o restaurant.o
+main: glouton.o progdyn.o main.o restaurant.o
+	g++ -o main main.o progdyn.o glouton.o restaurant.o
 clean: 
 	rm *.o 
 	rm main
