fixed makefile and started heuristic

--- a/TP2/makefile
+++ b/TP2/makefile
@@ -1,15 +1,25 @@
+CXXFLAGS= -Wall -Wextra
+
 all: main
 
-restaurant.o: 
-	g++ -c restaurant.cpp -Wall -g
-glouton.o: restaurant.o
-	g++ -c glouton.cpp -Wall -g
-progdyn.o:
-	g++ -c progdyn.cpp -Wall -g
-main.o :
-	g++ -c main.cpp -Wall -g
-main: glouton.o progdyn.o main.o restaurant.o
-	g++ -o main main.o progdyn.o glouton.o restaurant.o
+restaurant.o: restaurant.cpp
+	g++ -c restaurant.cpp $(CXXFLAGS)
+
+glouton.o: restaurant.o glouton.cpp
+	g++ -c glouton.cpp $(CXXFLAGS)
+
+heuristic.o: restaurant.o glouton.o
+	g++ -c heuristic.cpp $(CXXFLAGS)
+
+progdyn.o: progdyn.cpp restaurant.cpp
+	g++ -c progdyn.cpp $(CXXFLAGS)
+
+main.o : main.cpp progdyn.cpp restaurant.cpp
+	g++ -c main.cpp $(CXXFLAGS)
+
+main: glouton.o progdyn.o main.o restaurant.o heuristic.o
+	g++ -o main heuristic.o main.o progdyn.o glouton.o restaurant.o $(CXXFLAGS)
+
 clean: 
 	rm *.o 
 	rm main
