--- a/TP2/makefile
+++ b/TP2/makefile
@@ -21,11 +21,11 @@ main.o : main.cpp progdyn.cpp restaurant.cpp heuristic.cpp chronometre.cpp
 	g++ -c main.cpp $(CXXFLAGS)
 
 main: glouton.o progdyn.o main.o restaurant.o heuristic.o chronometre.o
-	g++ -Wl,--as-needed -o main main.o chronometre.o heuristic.o progdyn.o glouton.o restaurant.o $(CXXFLAGS)
+	g++ -o main main.o chronometre.o heuristic.o progdyn.o glouton.o restaurant.o $(CXXFLAGS)
 chrono_main.o: chrono_main.cpp
 	g++ -c chrono_main.cpp
 chrono_main: chrono_main.o glouton.o progdyn.o restaurant.o heuristic.o chronometre.o
-	g++ -Wl,--as-needed -o chrono_main chrono_main.o chronometre.o heuristic.o progdyn.o glouton.o restaurant.o
+	g++ -o chrono_main chrono_main.o chronometre.o heuristic.o progdyn.o glouton.o restaurant.o 
 clean: 
 	rm -f *.o 
 	rm -f main
