--- a/TP3/makefile
+++ b/TP3/makefile
@@ -6,11 +6,14 @@ all: main
 algo.o: algo.cpp
 	g++ -c algo.cpp $(CXXFLAGS)
 
+utils.o: utils.cpp
+	g++ -c utils.cpp $(CXXFLAGS)
+
 main.o : main.cpp algo.cpp
 	g++ -c main.cpp $(CXXFLAGS)
 
-main: algo.o main.o
-	g++ -o main main.o algo.o $(CXXFLAGS)
+main: algo.o main.o utils.o
+	g++ -o main main.o algo.o utils.o $(CXXFLAGS)
 
 clean: 
 	rm -f *.o 
