fixed merge conflict

--- a/TP3/makefile
+++ b/TP3/makefile
@@ -6,15 +6,19 @@ all: main
 algo.o: algo.cpp
 	g++ -c algo.cpp $(CXXFLAGS)
 
-utils.o: utils.cpp
-	g++ -c utils.cpp $(CXXFLAGS)
-circonscription.o : circonscription.cpp 
+municipalite.o : municipalite.cpp 
+	g++ -c municipalite.cpp $(CXXFLAGS)
+
+circonscription.o : circonscription.cpp municipalite.cpp
 	g++ -c circonscription.cpp $(CXXFLAGS)
+
+utils.o: utils.cpp municipalite.cpp circonscription.cpp 
+	g++ -c utils.cpp $(CXXFLAGS)
 main.o : main.cpp algo.cpp
 	g++ -c main.cpp $(CXXFLAGS)
 
 main: algo.o main.o utils.o
-	g++ -o main main.o circonscription.o algo.o utils.o $(CXXFLAGS)
+	g++ -o main main.o  municipalite.o circonscription.o algo.o utils.o $(CXXFLAGS)
 
 clean: 
 	rm -f *.o 
