--- a/TP3/makefile
+++ b/TP3/makefile
@@ -3,8 +3,6 @@ CXXFLAGS= -Wall -g
 all: main
 
 
-algo.o: algo.cpp
-	g++ -c algo.cpp $(CXXFLAGS)
 
 municipalite.o : municipalite.cpp 
 	g++ -c municipalite.cpp $(CXXFLAGS)
@@ -12,13 +10,14 @@ municipalite.o : municipalite.cpp
 circonscription.o : circonscription.cpp municipalite.cpp
 	g++ -c circonscription.cpp $(CXXFLAGS)
 
-utils.o: utils.cpp municipalite.cpp circonscription.cpp 
-	g++ -c utils.cpp $(CXXFLAGS)
-main.o : main.cpp algo.cpp
+heuristique.o: heuristique.cpp municipalite.cpp circonscription.cpp
+	g++ -c heuristique.cpp $(CXXFLAGS)
+
+main.o : main.cpp heuristique.cpp
 	g++ -c main.cpp $(CXXFLAGS)
 
-main: algo.o main.o utils.o
-	g++ -o main main.o  municipalite.o circonscription.o algo.o utils.o $(CXXFLAGS)
+main: heuristique.o main.o municipalite.o circonscription.o
+	g++ -o main main.o  municipalite.o circonscription.o heuristique.o $(CXXFLAGS)
 
 clean: 
 	rm -f *.o 
